--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.19"
-serde = "1.0.173"
+serde = { version = "1.0.173", features = ["derive"] }
+serde_json = "1.0.103"
 tokio = {version = "1.29.1", features = ["full"]}
