--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ axum = "0.6.19"
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
 tokio = {version = "1.29.1", features = ["full"]}
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "macros"] }
+anyhow = "1.0.72"
+postgres = "0.19.5"
+
