--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - "main"
 
-env: 
-  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+# env: 
+#   DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
 jobs:
   deploy:
@@ -24,16 +24,16 @@ jobs:
       - name: Setup Rust Cache
         uses: Swatinem/rust-cache@v1
 
-      - name: Cache Sqlx
-        id: cache-sqlx
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/bin
-          key: ${{ runner.os }}-sqlx-${{ hashFiles('**/install-sqlx.sh')}}
+      # - name: Cache Sqlx
+      #   id: cache-sqlx
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ~/.cargo/bin
+      #     key: ${{ runner.os }}-sqlx-${{ hashFiles('**/install-sqlx.sh')}}
 
-      - name: Install sqlx cli
-        if: steps.cache-sqlx.outputs.cache-hit != 'true'
-        run: ./scripts/install-sqlx.sh
+      # - name: Install sqlx cli
+      #   if: steps.cache-sqlx.outputs.cache-hit != 'true'
+      #   run: ./scripts/install-sqlx.sh
 
       - name: Cargo Build
         run: cargo build --release
@@ -41,5 +41,5 @@ jobs:
       - name: Docker Build
         run: docker build -t app:${{ github.sha }} .
 
-      - name: Docker Push
-        run: docker push app:${{ github.sha }}
+      # - name: Docker Push
+      #   run: docker push app:${{ github.sha }}
