--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ tokio = {version = "1.29.1", features = ["full"]}
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "macros"] }
 anyhow = "1.0.72"
 postgres = "0.19.5"
+validator = { version = "0.15", features = ["derive"] }
+
 
